Minor tweaks to running a small spark cluster